# UNI-System-Programing

./: CMakeLists.txt  readme.md
include/: FunctionalUnit.hpp  Instructiondispatcher.hpp  Processor.hpp  SystemArchitecture.hpp  test.hpp
include/adressingTypes/: AdressingTypes.hpp  AdressingTypesFactory.hpp  Direct.hpp  Imediate.hpp  Implicit.hpp  Indexed.hpp  IndirectRegister.hpp  InputAdressingTypes.hpp
include/memory/: Memory.hpp  Registers.hpp
src/: FunctionalUnit.cpp  Instructiondispatcher.cpp  Processor.cpp  SystemArchitecture.cpp  SystemArchitecture.hpp  main.cpp
src/adressingTypes/: AdressingTypes.cpp  AdressingTypesFactory.cpp  Direct.cpp  Imediate.cpp  Implicit.cpp  Indexed.cpp  IndirectRegister.cpp  InputAdressingTypes.cpp
src/memory/: Memory.cpp  Registers.cpp
